--- a/presentations/deliver.ipynb
+++ b/presentations/deliver.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Deep Learning with TensorFlow Workshop \n",
     "\n",
-    "# [github.com/aymanibrahim/dlpy](https://github.com/aymanibrahim/dlpy)"
+    "# [github.com/aymanibrahim/dltf](https://github.com/aymanibrahim/dltf)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [01 Intro](https://github.com/aymanibrahim/dlpy/blob/master/notebooks/01_Intro.ipynb)"
+    "# [01 Intro](https://github.com/aymanibrahim/dltf/blob/master/notebooks/01_Intro.ipynb)"
    ]
   },
   {
@@ -88,7 +88,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## [02 Convolutional Neural Networks (CNN)](https://github.com/aymanibrahim/dlpy/blob/master/notebooks/02_CNN.ipynb)"
+    "## [02 Convolutional Neural Networks (CNN)](https://github.com/aymanibrahim/dltf/blob/master/notebooks/02_CNN.ipynb)"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## [03 Recurrent Neural Networks (RNN)](https://github.com/aymanibrahim/dlpy/blob/master/notebooks/03_RNN.ipynb)"
+    "## [03 Recurrent Neural Networks (RNN)](https://github.com/aymanibrahim/dltf/blob/master/notebooks/03_RNN.ipynb)"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## [04  Unsupervised Learning](https://github.com/aymanibrahim/dlpy/blob/master/notebooks/04_RBM.ipynb)"
+    "## [04  Unsupervised Learning](https://github.com/aymanibrahim/dltf/blob/master/notebooks/04_RBM.ipynb)"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## [05 Autoencoders](https://github.com/aymanibrahim/dlpy/blob/master/notebooks/05_Autoencoders.ipynb)"
+    "## [05 Autoencoders](https://github.com/aymanibrahim/dltf/blob/master/notebooks/05_Autoencoders.ipynb)"
    ]
   },
   {
@@ -219,9 +219,9 @@
     "### 2.1: Download workshop code & materials\n",
     "Clone the repository\n",
     "```\n",
-    "git clone git@github.com:aymanibrahim/dlpy.git\n",
+    "git clone git@github.com:aymanibrahim/dltf.git\n",
     "```\n",
-    "OR [Download the repository as a .zip file](https://github.com/aymanibrahim/dlpy/archive/master.zip)"
+    "OR [Download the repository as a .zip file](https://github.com/aymanibrahim/dltf/archive/master.zip)"
    ]
   },
   {
@@ -233,9 +233,9 @@
    },
    "source": [
     "### 2.2: Change directory to dapy\n",
-    "Change current directory to **dlpy** directory\n",
+    "Change current directory to **dltf** directory\n",
     "```\n",
-    "cd dlpy\n",
+    "cd dltf\n",
     "```"
    ]
   },
@@ -248,7 +248,7 @@
    },
    "source": [
     "### 2.3: Install Python with required packages\n",
-    "Install Python 3.7 with the required packages into an environment named _dlpy_  as per [environment.yml](https://github.com/aymanibrahim/dlpy/blob/master/environment.yml) YAML file.\n",
+    "Install Python 3.7 with the required packages into an environment named _dltf_  as per [environment.yml](https://github.com/aymanibrahim/dltf/blob/master/environment.yml) YAML file.\n",
     "```\n",
     "conda env create -f environment.yml\n",
     "```\n",
@@ -264,9 +264,9 @@
    },
    "source": [
     "## 3: Activate environment\n",
-    "Change the current default environment (_base_) into _dlpy_ environment.\n",
+    "Change the current default environment (_base_) into _dltf_ environment.\n",
     "```\n",
-    "conda activate dlpy\n",
+    "conda activate dltf\n",
     "```"
    ]
   },
@@ -299,8 +299,8 @@
    },
    "source": [
     "## 5: Check installation\n",
-    "Use [check_environment.py](https://github.com/aymanibrahim/dlpy/blob/master/check_environment.py) script to make sure everything was installed correctly, open a terminal, and change its directory (cd) so that your working directory\n",
-    "is the workshop directory _dlpy_ you cloned or downloaded. Then enter the following:\n",
+    "Use [check_environment.py](https://github.com/aymanibrahim/dltf/blob/master/check_environment.py) script to make sure everything was installed correctly, open a terminal, and change its directory (cd) so that your working directory\n",
+    "is the workshop directory _dltf_ you cloned or downloaded. Then enter the following:\n",
     "```\n",
     "python check_environment.py\n",
     "```"
@@ -357,7 +357,7 @@
    },
    "source": [
     "## 8: Deactivate environment\n",
-    "Change the current environment (_dlpy_) into the previous environment.\n",
+    "Change the current environment (_dltf_) into the previous environment.\n",
     "```\n",
     "conda deactivate\n",
     "```"
