Remove commented code

--- a/notebooks/01_Intro.ipynb
+++ b/notebooks/01_Intro.ipynb
@@ -1151,8 +1151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.train.GradientDescentOptimizer(0.05)\n",
-    "# optimizer = tf.optimizers.SGD (learning_rate=0.05)"
+    "optimizer = tf.train.GradientDescentOptimizer(0.05)"
    ]
   },
   {
